src/sass/gtk/_budgie.scss
/* ... */
// Notifications
%budgie-notification-window,
.budgie-notification-window {
  background-color: transparent;
  background-image: none;
  border-radius: $wm_radius;

  button.image-button { // 'close'
    margin: 0;
    padding: 0;
    min-height: 28px;
    min-width: 28px;
    border-radius: 100px;
  }
}

%budgie-notification,
.budgie-notification {
  background-color: transparent;
  background-image: none;

  .notification-title { font-size: 120%; }
  .notification-body { @extend %dim-label; }
}

// On Screen Display in Budgie
.budgie-osd-window {
  @extend %budgie-notification-window;
}

// Internal part of the OSD
.budgie-osd {
  background-color: transparent;
  background-image: none;
  .budgie-osd-text { font-size: 120%; }
}

// Alt+tab switcher in Budgie
.budgie-switcher-window {
  @extend %budgie-notification-window;
}

window.budgie-switcher-window {
  border-radius: $wm_radius;
  background-color: transparent;
  background-image: none;

  // draw actual backgrounds and shadows
  .drop-shadow {
    @extend %drop-shadow;

    // label.budgie-switcher-title { // bottom label for app titles
    // }
  }

  flowboxchild { // icon-tiles
    margin: 2px;
    border-radius: $wm_radius;
    -gtk-outline-radius: $wm_radius;
    // background-color: transparent;
    background-image: none;
  }
}

// Internal part of the Switcher
.budgie-switcher {
  @extend %budgie-notification;
  // background-color: transparent;
  // background-image: none;
}

%drop-shadow, .drop-shadow {
  margin: 5px 9px;
  padding: 8px;
  border-radius: $wm_radius;
  box-shadow: 0 5px 5px 0 transparent, 0 8px 15px 0 transparent,
              0 3px 3px 0 if($variant == 'light', opacify($wm_shadow, 0.15), opacify($wm_shadow, 0.1)),
              0 0 0 1px if($variant=='light', rgba($borders_color, 0.15), rgba($dark_borders_color, 0.55)),
              inset 0 0 0 1px rgba(white, 0.06);

  background-color: if($trans == 'true', rgba($base_color, 0.95), $base_color);
  background-image: none;

  button { @extend %budgie_button; }

  .linked > button { border-radius: $bt_radius; }
}

%budgie_dialog {
  border-radius: $wm_radius;
  background-color: $bg_color;
  @if $variant == 'dark' { border: 1px solid lighten($menu_bg, 10%); }

  &.background {border-radius: $wm_radius; }
  decoration { border-radius: $wm_radius; }
}

// Session Dialog
.budgie-session-dialog,
.budgie-polkit-dialog {
  @extend %budgie_dialog;

  label:not(:last-child),
  .dialog-title { font-size: 120%; }

  buttonbox.linked.horizontal > button {
    padding: 4px 16px;
    border: none;
    border-top: 1px solid $dark_borders_color;
    border-radius: 0;

    &:first-child { border-bottom-left-radius: $wm_radius; }
    &:last-child { border-bottom-right-radius: $wm_radius; }
  }

  buttonbox.linked.horizontal > button:not(.suggested-action):not(.destructive-action) {
    &:hover {
      @include button(flat-hover);
      border-color: $dark_borders_color;
      transition: $button_transition;
    }

    &:active, &:checked {
      @include button(flat-active);
      border-color: $dark_borders_color;
      text-shadow: $text_shadow;
    }
  }
}

// PolKit Dialog
.budgie-polkit-dialog {
  @extend %budgie_dialog;

  .message { color: gtkalpha(currentColor, 0.6); }
  .failure { color: $destructive_color; }
}

// Run Dialog
.budgie-run-dialog {
  @extend %budgie_dialog;

  background-color: $base_color;

  entry.search {
    font-size: 120%;
    padding: 6px 12px;
    box-shadow: inset 0 1px $highlight_color;
    background-color: transparent;
  }

  list .dim-label { opacity: 1; }

  scrolledwindow { border-top: 1px solid $borders_color; }
}

// pixel-saver(?) applet
.budgie-panel box.titlebar {
  min-width: 20px;
  min-height: 20px;
  border-radius: 0;
  background: none;
  box-shadow: none;
  border: none;

  > widget > label { color: rgba($panel_fg, 0.75); } // titles

  > button.image-button.titlebutton { padding: 0 3px; }

  &.horizontal { // spacing
    padding: 0 3px;

    > widget > label {
      &:dir(ltr) { padding-right: 3px; }
      &:dir(rtl) { padding-left: 3px; }
    }

    > button.image-button.titlebutton { padding: 0 3px; }
  }
}

